Fixed lines of code being forced onto seperate lines when window width 2too short

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,12 +20,10 @@ body {
     background: $bg;
 }
 
-a {
-    text-decoration: none;
-}
-
 *[id^="cont"] {
     padding: 16px;
+    min-width: 466px;
+    display: inline-block;
 }
 
 .win, #header {
